<resources>
    <string name="app_name">Easy Note</string>

    <string name="app_label">EASY NOTE</string>
    <string name="search_hint">Search your note </string>
    <string name="nav_home">Home</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_notebooks">Notebooks</string>
    <string name="nav_reminders">Reminders</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_help">Help and support</string>
    <string name="Rate_your_experiecnce">Rate Your Experiecnce</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="lock_this_notebook">Lock this notebook</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="reminder_settings">Reminder Settings</string>
    <string name="only_notifications">Only notifications</string>
    <string name="only_sounds">Only sounds</string>
    <string name="both_notifications_and_sounds">Both notifications and sounds</string>
    <string name="passwords_setting">Passwords setting</string>
    <string name="create_a_notebook">CREATE A NOTEBOOK?</string>
    <string name="delete_item">DELETE?</string>
</resources>