<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/nav_bookmark"
            android:title="@string/nav_bookmarks"
            android:icon="@drawable/ic_bookmark"/>

        <item
            android:id="@+id/nav_notebook"
            android:title="@string/nav_notebooks"
            android:icon="@drawable/ic_note_book"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reminder"
            android:title="@string/nav_reminders"
            android:icon="@drawable/ic_reminder"/>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/nav_feedback"
            android:icon="@drawable/ic_feedback"/>

        <item
            android:id="@+id/nav_help"
            android:title="@string/nav_help"
            android:icon="@drawable/ic_help"/>
    </group>
</menu>