<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Setting_Screen"
    android:background="@color/grey_metal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <View
                    android:layout_width="100dp"
                    android:layout_height="7dp"
                    android:background="@color/blue_light"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_horizontal"
                    android:text="@string/app_label"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:fontFamily="@font/lobster_regular"
                    android:layout_marginTop="5dp"/>

                <Switch
                    android:id="@+id/swdarkmode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:theme="@style/SwitchTheme"
                    android:text="@string/dark_mode"
                    android:layout_marginBottom="5dp"/>

                <Switch
                    android:id="@+id/swnotionly"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:theme="@style/SwitchTheme"
                    android:text="@string/only_notifications"
                    android:layout_marginBottom="5dp"/>

                <Switch
                    android:id="@+id/swsoundonly"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:theme="@style/SwitchTheme"
                    android:text="@string/only_sounds"
                    android:layout_marginBottom="5dp"/>

                <Switch
                    android:id="@+id/swbothnoti"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:theme="@style/SwitchTheme"
                    android:text="@string/both_notifications_and_sounds"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textViewpassword"
                        android:layout_width="320dp"
                        android:layout_height="40dp"
                        android:text="@string/passwords_setting"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:textSize="15sp"
                        android:layout_marginBottom="5dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow_right"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>