<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header_menu"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!-- This custom is for the first above-->
    <RelativeLayout
        android:id="@+id/appName_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_metal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:elevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/name_of_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_metal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp">

            <ImageButton
                android:id="@+id/imgbtn_menu"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/app_label"
                android:src="@drawable/ic_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster_regular"
                android:text="@string/app_label"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName_container"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_search"
        android:elevation="10dp"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/app_name"
            app:tint="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColorHint="@color/light_black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/NotesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/img_addnote"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="@dimen/_8sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>